--- a/index.html
+++ b/index.html
@@ -1,1 +1,54 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mao Iwamoto</title>
+
+    <link rel="stylesheet" href="css/style.css">
+    <script src="https://code.jquery.com/jquery-3.7.1.js"
+        integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <script src="js/script.js"></script>
+</head>
+
+<body>
+    <!--ヘッダー-->
+    <div class="Header_group">
+        <img class="Header_img" src="img/header.png" alt="">
+        <img class="Icon_img" src="img/icon.png" alt="">
+    </div>
+    <p class="My_name">MAO IWAMOTO</p>
+    <p class="My_idname">@mao_iwamoto</p>
+    <p class="My_school">TAU idd 2</p>
+    <hr size="1">
+
+    <!--1個目のコンテンツ-->
+    <div class="Timeline_content1">
+        <img class="Timeline_img" src="img/icon.png" alt="">
+        <div class="content1_box">
+            <div class="Head_info1">
+                <p class="In_my_name">MAO IWAMOTO</p>
+                <p class="In_my_idname">@mao_iwamoto</p>
+                <p class="date">2004/09/15</p>
+            </div>
+            <p class="content1">I was born in Nara prefecture.</p>
+        </div>
+    </div>
+    <img class="content_img1" src="img/Img1small.png" alt="">
+    <hr size="1">
+
+    <!--
+    <div class="Timeline_content1">
+        <div class="Timeline_content1_in">
+        <img class="Timeline_img" src="img/icon.png" alt="">
+        <p class="In_my_name">MAO IWAMOTO</p>
+        <p class="In_my_idname">@mao_iwamoto</p>
+        <p class="date">2004/09/15</p>
+        </div>
+        <p class="content1">I was born in Nara prefecture.</p>
+    </div>
+    -->
+</body>
+
+</html>
