--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!--ヘッダー-->
     <div class="Header_group">
         <img class="Header_img" src="https://github.com/camen89/selfIntro/blob/main/header.png?raw=true" alt="">
-        <img class="Icon_img" src="img/icon.png" alt="">
+        <img class="Icon_img" src="https://github.com/camen89/selfIntro/blob/main/icon.png?raw=true" alt="">
     </div>
     <p class="My_name">MAO IWAMOTO</p>
     <p class="My_idname">@mao_iwamoto</p>
@@ -25,7 +25,7 @@
 
     <!--1個目のコンテンツ-->
     <div class="Timeline_content1">
-        <img class="Timeline_img" src="img/icon.png" alt="">
+        <img class="Timeline_img" src="https://github.com/camen89/selfIntro/blob/main/icon.png?raw=true" alt="">
         <div class="content1_box">
             <div class="Head_info1">
                 <p class="In_my_name">MAO IWAMOTO</p>
