--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <p class="content1">I was born in Nara prefecture.</p>
         </div>
     </div>
-    <img class="content_img1" src="img/Img1small.png" alt="">
+    <img class="content_img1" src="https://github.com/camen89/selfIntro/blob/main/Img1small.png?raw=true" alt="">
     <hr size="1">
 
     <!--
