--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mao Iwamoto</title>
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://camen89.github.io/selfIntro/style.css">
     <script src="https://code.jquery.com/jquery-3.7.1.js"
         integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
-    <script src="js/script.js"></script>
+    <script src="https://camen89.github.io/selfIntro/script.js"></script>
 </head>
 
 <body>
