--- a/index.html
+++ b/index.html
@@ -15,17 +15,23 @@
 <body>
     <!--ヘッダー-->
     <div class="Header_group">
-        <img class="Header_img" src="https://github.com/camen89/selfIntro/blob/main/header.png?raw=true" alt="">
-        <img class="Icon_img" src="https://github.com/camen89/selfIntro/blob/main/icon.png?raw=true" alt="">
+        <img class="Header_img" src="img/header.png" alt="">
+        <img class="Icon_img" src="img/icon.png" alt="">
     </div>
     <p class="My_name">MAO IWAMOTO</p>
     <p class="My_idname">@mao_iwamoto</p>
+    <div class="profile_bottom">
     <p class="My_school">TAU idd 2</p>
+    <p>　/　</p>
+    <a class="x_link" href="https://twitter.com/Energy_Ikeda">Twitter</a>
+    <p>　/　</p>
+    <a class="insta_link" href="https://www.instagram.com/energyikeda/">Instagram</a>
+    </div>
     <hr size="1">
 
-    <!--1個目のコンテンツ-->
+    <!--1個目のコンテンツ(born)-->
     <div class="Timeline_content1">
-        <img class="Timeline_img" src="https://github.com/camen89/selfIntro/blob/main/icon.png?raw=true" alt="">
+        <img class="Timeline_img" src="img/icon.png" alt="">
         <div class="content1_box">
             <div class="Head_info1">
                 <p class="In_my_name">MAO IWAMOTO</p>
@@ -35,10 +41,89 @@
             <p class="content1">I was born in Nara prefecture.</p>
         </div>
     </div>
-    <img class="content_img1" src="https://github.com/camen89/selfIntro/blob/main/Img1small.png?raw=true" alt="">
+    <img class="content_img1" src="img/Nara.png" alt="">
     <hr size="1">
 
+    <!--２個目のコンテンツ(interaction design)-->
+    <div class="Timeline_content1">
+        <img class="Timeline_img" src="img/icon.png" alt="">
+        <div class="content1_box">
+            <div class="Head_info1">
+                <p class="In_my_name">MAO IWAMOTO</p>
+                <p class="In_my_idname">@mao_iwamoto</p>
+                <p class="date">2023/04/01</p>
+            </div>
+            <p class="content1">I'm interested in Interaction design.</p>
+        </div>
+    </div>
+    <img class="content_img1" src="img/interactiondesign.png" alt="">
+    <hr size="1">
+
+    <!--３個目のコンテンツ(clickdrawing)-->
+    <div class="Timeline_content1">
+        <img class="Timeline_img" src="img/icon.png" alt="">
+        <div class="content1_box">
+            <div class="Head_info1">
+                <p class="In_my_name">MAO IWAMOTO</p>
+                <p class="In_my_idname">@mao_iwamoto</p>
+                <p class="date">2023/10/01</p>
+            </div>
+            <p class="content1">This content records the trajectory of a mouse.　/　<a href="https://camen89.github.io/Mouse-move-redesign/">site</a>　/　<a href="">demo</a></p>
+        </div>
+    </div>
+    <img class="content_img1" src="img/clickdrawing.png" alt="">
+    <hr size="1">
+
+    <!--４個目のコンテンツ(thx newton)-->
+    <div class="Timeline_content1">
+        <img class="Timeline_img" src="img/icon.png" alt="">
+        <div class="content1_box">
+            <div class="Head_info1">
+                <p class="In_my_name">MAO IWAMOTO</p>
+                <p class="In_my_idname">@mao_iwamoto</p>
+                <p class="date">2023/10/15</p>
+            </div>
+            <p class="content1">This site visualize gravity using a spring pendulum.　/　<a href="https://camen89.github.io/GRAVITY_inside/">site</a>　/　<a href="">demo</a></p>
+        </div>
+    </div>
+    <img class="content_img1" src="img/thxNewton.png" alt="">
+    <hr size="1">
+
+    <!--５個目のコンテンツ(step typing)-->
+    <div class="Timeline_content1">
+        <img class="Timeline_img" src="img/icon.png" alt="">
+        <div class="content1_box">
+            <div class="Head_info1">
+                <p class="In_my_name">MAO IWAMOTO</p>
+                <p class="In_my_idname">@mao_iwamoto</p>
+                <p class="date">2023/03/31</p>
+            </div>
+            <p class="content1">Step typing.　/　<a href="https://camen89.github.io/StepTYPING/">site</a>　/　<a href="">demo</a></p>
+        </div>
+    </div>
+    <img class="content_img1" src="img/steptyping.png" alt="">
+    <hr size="1">
+
+
+    <!--6個目のコンテンツ(TAU enter)-->
     <!--
+    <div class="Timeline_content1">
+        <img class="Timeline_img" src="img/icon.png" alt="">
+        <div class="content1_box">
+            <div class="Head_info1">
+                <p class="In_my_name">MAO IWAMOTO</p>
+                <p class="In_my_idname">@mao_iwamoto</p>
+                <p class="date">2023/04/01</p>
+            </div>
+            <p class="content1">I entered the TAU idd.</p>
+        </div>
+    </div>
+    <img class="content_img1" src="img/Img1small.png" alt="">
+    <hr size="1">
+    -->
+    
+
+    <!--　初期コード(残しておく)
     <div class="Timeline_content1">
         <div class="Timeline_content1_in">
         <img class="Timeline_img" src="img/icon.png" alt="">
@@ -49,6 +134,7 @@
         <p class="content1">I was born in Nara prefecture.</p>
     </div>
     -->
+    <script src="js/script.js"></script>
 </body>
 
 </html>
