--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <p class="content1">I was born in Nara prefecture.</p>
         </div>
     </div>
-    <img class="content_img1" src="img/Nara.png" alt="">
+    <img class="content_img1" src="https://github.com/camen89/selfIntro/blob/main/Nara.png?raw=true" alt="">
     <hr size="1">
 
     <!--２個目のコンテンツ(interaction design)-->
@@ -56,7 +56,7 @@
             <p class="content1">I'm interested in Interaction design.</p>
         </div>
     </div>
-    <img class="content_img1" src="img/interactiondesign.png" alt="">
+    <img class="content_img1" src="https://github.com/camen89/selfIntro/blob/main/interactiondesign.png?raw=true" alt="">
     <hr size="1">
 
     <!--３個目のコンテンツ(clickdrawing)-->
@@ -71,7 +71,7 @@
             <p class="content1">This content records the trajectory of a mouse.　/　<a href="https://camen89.github.io/Mouse-move-redesign/">site</a>　/　<a href="">demo</a></p>
         </div>
     </div>
-    <img class="content_img1" src="img/clickdrawing.png" alt="">
+    <img class="content_img1" src="https://github.com/camen89/selfIntro/blob/main/clickdrawing.png?raw=true" alt="">
     <hr size="1">
 
     <!--４個目のコンテンツ(thx newton)-->
@@ -86,7 +86,7 @@
             <p class="content1">This site visualize gravity using a spring pendulum.　/　<a href="https://camen89.github.io/GRAVITY_inside/">site</a>　/　<a href="">demo</a></p>
         </div>
     </div>
-    <img class="content_img1" src="img/thxNewton.png" alt="">
+    <img class="content_img1" src="https://github.com/camen89/selfIntro/blob/main/thxNewton.png?raw=true" alt="">
     <hr size="1">
 
     <!--５個目のコンテンツ(step typing)-->
@@ -101,7 +101,7 @@
             <p class="content1">Step typing.　/　<a href="https://camen89.github.io/StepTYPING/">site</a>　/　<a href="">demo</a></p>
         </div>
     </div>
-    <img class="content_img1" src="img/steptyping.png" alt="">
+    <img class="content_img1" src="https://github.com/camen89/selfIntro/blob/main/steptyping.png?raw=true" alt="">
     <hr size="1">
 
 
