--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <body>
     <!--ヘッダー-->
     <div class="Header_group">
-        <img class="Header_img" src="img/header.png" alt="">
-        <img class="Icon_img" src="img/icon.png" alt="">
+        <img class="Header_img" src="https://github.com/camen89/selfIntro/blob/main/header.png?raw=true" alt="">
+        <img class="Icon_img" src="https://github.com/camen89/selfIntro/blob/main/icon.png?raw=true" alt="">
     </div>
     <p class="My_name">MAO IWAMOTO</p>
     <p class="My_idname">@mao_iwamoto</p>
