--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <!--1個目のコンテンツ(born)-->
     <div class="Timeline_content1">
-        <img class="Timeline_img" src="img/icon.png" alt="">
+        <img class="Timeline_img" src="https://github.com/camen89/selfIntro/blob/main/icon.png?raw=true" alt="">
         <div class="content1_box">
             <div class="Head_info1">
                 <p class="In_my_name">MAO IWAMOTO</p>
@@ -46,7 +46,7 @@
 
     <!--２個目のコンテンツ(interaction design)-->
     <div class="Timeline_content1">
-        <img class="Timeline_img" src="img/icon.png" alt="">
+        <img class="Timeline_img" src="https://github.com/camen89/selfIntro/blob/main/icon.png?raw=true" alt="">
         <div class="content1_box">
             <div class="Head_info1">
                 <p class="In_my_name">MAO IWAMOTO</p>
@@ -61,7 +61,7 @@
 
     <!--３個目のコンテンツ(clickdrawing)-->
     <div class="Timeline_content1">
-        <img class="Timeline_img" src="img/icon.png" alt="">
+        <img class="Timeline_img" src="https://github.com/camen89/selfIntro/blob/main/icon.png?raw=true" alt="">
         <div class="content1_box">
             <div class="Head_info1">
                 <p class="In_my_name">MAO IWAMOTO</p>
@@ -76,7 +76,7 @@
 
     <!--４個目のコンテンツ(thx newton)-->
     <div class="Timeline_content1">
-        <img class="Timeline_img" src="img/icon.png" alt="">
+        <img class="Timeline_img" src="https://github.com/camen89/selfIntro/blob/main/icon.png?raw=true" alt="">
         <div class="content1_box">
             <div class="Head_info1">
                 <p class="In_my_name">MAO IWAMOTO</p>
@@ -91,7 +91,7 @@
 
     <!--５個目のコンテンツ(step typing)-->
     <div class="Timeline_content1">
-        <img class="Timeline_img" src="img/icon.png" alt="">
+        <img class="Timeline_img" src="https://github.com/camen89/selfIntro/blob/main/icon.png?raw=true" alt="">
         <div class="content1_box">
             <div class="Head_info1">
                 <p class="In_my_name">MAO IWAMOTO</p>
