--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <p class="In_my_idname">@mao_iwamoto</p>
                 <p class="date">2023/10/01</p>
             </div>
-            <p class="content1">This content records the trajectory of a mouse.　/　<a href="https://camen89.github.io/Mouse-move-redesign/">site</a>　/　<a href="https://drive.google.com/file/d/1jPnLW1dC6YOu-LAAp1x8X8674K5DZkuO/view?usp=sharing">demo</a></p>
+            <p class="content1">This content records the trajectory of a mouse.　/　<a href="https://drive.google.com/file/d/1jPnLW1dC6YOu-LAAp1x8X8674K5DZkuO/view?usp=sharing">demo</a></p>
         </div>
     </div>
     <img class="content_img1" src="https://github.com/camen89/selfIntro/blob/main/clickdrawing.png?raw=true" alt="">
@@ -83,7 +83,7 @@
                 <p class="In_my_idname">@mao_iwamoto</p>
                 <p class="date">2023/10/15</p>
             </div>
-            <p class="content1">This site visualize gravity using a spring pendulum.　/　<a href="https://camen89.github.io/GRAVITY_inside/">site</a>　/　<a href="https://drive.google.com/file/d/1uhfxBgd9H12EbwQzKjSC3mAeCUz7AjIp/view?usp=sharing">demo</a></p>
+            <p class="content1">This site visualize gravity using a spring pendulum.　/　<a href="https://drive.google.com/file/d/1uhfxBgd9H12EbwQzKjSC3mAeCUz7AjIp/view?usp=sharing">demo</a></p>
         </div>
     </div>
     <img class="content_img1" src="https://github.com/camen89/selfIntro/blob/main/thxNewton.png?raw=true" alt="">
