--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
 </head>
 
 <body>
+
+    <div class="loader">
+      <div class="one"></div>
+      <div class="two"></div>
+      <div class="three"></div>
+      <div class="four"></div>
+    </div>
     <!--ヘッダー-->
     <div class="Header_group">
         <img class="Header_img" src="https://github.com/camen89/selfIntro/blob/main/header.png?raw=true" alt="">
