--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <p class="My_idname">@mao_iwamoto</p>
     <div class="profile_bottom">
     <p class="My_school">TAU idd 2</p>
-    <p>　/　</p>
-    <a class="x_link" href="https://twitter.com/Energy_Ikeda">Twitter</a>
+    <!--<p>　/　</p>
+    <a class="x_link" href="https://twitter.com/Energy_Ikeda">Twitter</a>!-->
     <p>　/　</p>
     <a class="insta_link" href="https://www.instagram.com/energyikeda/">Instagram</a>
     </div>
